--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <H1>Michael S. Warren</H1>
 <IMG SRC="Portrait2012_300.png" ALT="MSW portrait" WIDTH=400 HEIGHT=400>
 <p>
-<a href="http://scholar.google.com/citations?user=JwEOoMAAAAAJ"> Google Scholar </a>
+<a href="https://www.google.com/+MikeWarren0"> Google+ </a>
+<p>
+<a href="https://scholar.google.com/citations?user=JwEOoMAAAAAJ"> Google Scholar </a>
+<p>
+<a href="https://github.com/mswarren"> GitHub </a>
+<p>
+Twitter: @m_warren
+
 <p>
 
 <DL>
