--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p>
 <a href="https://github.com/mswarren"> GitHub </a>
 <p>
-Twitter: @m_warren
+<a href="https://twitter.com/m_warren"> Twitter </a> @m_warren
 <p>
 
 <DL>
@@ -30,7 +30,7 @@ Twitter: @m_warren
 Last modified: June 10, 2014 <p>
 
 <ADDRESS>
-<A href="/~msw"> Michael S. Warren, </A> <A href="mailto:&#109;&#x73;&#119;&#64;&#x6c;&#x61;&#110;&#x6c;&#x2e;&#x67;&#x6f;&#x76;">&#109;&#x73;&#119;&#64;&#x6c;&#x61;&#110;&#x6c;&#x2e;&#x67;&#x6f;&#x76;</A>
+<A href="/"> Michael S. Warren, </A> <A href="mailto:&#109;&#x73;&#119;&#64;&#x6c;&#x61;&#110;&#x6c;&#x2e;&#x67;&#x6f;&#x76;">&#109;&#x73;&#119;&#64;&#x6c;&#x61;&#110;&#x6c;&#x2e;&#x67;&#x6f;&#x76;</A>
 </ADDRESS>
 
 </BODY>
