--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <p>
 <a href="https://github.com/mswarren"> GitHub </a>
 <p>
+<a href="https://figshare.com/authors/Michael_S_Warren/541288"> figshare </a>
+<p>
 <a href="https://twitter.com/m_warren"> Twitter </a> @m_warren
 <p>
 
