--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <HTML>
 
 <HEAD>
-<TITLE>Michael S. Warren</TITLE>
-<LINK REV="made" HREF="&#109;&#x73;&#119;&#64;&#x6c;&#x61;&#110;&#x6c;&#x2e;&#x67;&#x6f;&#x76;">
+<TITLE>Mike Warren</TITLE>
+<LINK REV="made" HREF="%6D%69%6B%65%40%64%65%73%63%61%72%74%65%73%6C%61%62%73%2E%63%6F%6D">
 </HEAD>
 
 <BODY>
 
-<H1>Michael S. Warren</H1>
+<H1>Mike Warren</H1>
 <IMG SRC="Portrait2012_300.png" ALT="MSW portrait" WIDTH=400 HEIGHT=400>
-<p>
-<a href="https://www.google.com/+MikeWarren0"> Google+ </a>
 <p>
 <a href="https://scholar.google.com/citations?user=JwEOoMAAAAAJ"> Google Scholar </a>
 <p>
@@ -18,21 +16,22 @@
 <p>
 <a href="https://github.com/mswarren"> GitHub </a>
 <p>
+<a href="https://github.com/mikewarren0"> Descartes Labs GitHub </a>
+<p>
 <a href="https://figshare.com/authors/Michael_S_Warren/541288"> figshare </a>
 <p>
 <a href="https://twitter.com/m_warren"> Twitter </a> @m_warren
 <p>
 
 <DL>
-<DT> <A href="mailto:&#109;&#x73;&#119;&#64;&#x6c;&#x61;&#110;&#x6c;&#x2e;&#x67;&#x6f;&#x76;"> &#109;&#x73;&#119;&#64;&#x6c;&#x61;&#110;&#x6c;&#x2e;&#x67;&#x6f;&#x76; </A>
-<DT>(505) 665-5023
-<DT>Mail Stop B227, Los Alamos National Laboratory, Los Alamos, NM 87545
+<DT> <A href="mailto:%6D%69%6B%65%40%64%65%73%63%61%72%74%65%73%6C%61%62%73%2E%63%6F%6D"> %6D%69%6B%65%40%64%65%73%63%61%72%74%65%73%6C%61%62%73%2E%63%6F%6D </A>
+<DT> 100 N Guadalupe St, Santa Fe NM 87501
 </DL>
 
-Last modified: June 10, 2014 <p>
+Last modified: March 28, 2020 <p>
 
 <ADDRESS>
-<A href="/"> Michael S. Warren, </A> <A href="mailto:&#109;&#x73;&#119;&#64;&#x6c;&#x61;&#110;&#x6c;&#x2e;&#x67;&#x6f;&#x76;">&#109;&#x73;&#119;&#64;&#x6c;&#x61;&#110;&#x6c;&#x2e;&#x67;&#x6f;&#x76;</A>
+<A href="/"> Mike Warren, </A> <A href="mailto:%6D%69%6B%65%40%64%65%73%63%61%72%74%65%73%6C%61%62%73%2E%63%6F%6D">%6D%69%6B%65%40%64%65%73%63%61%72%74%65%73%6C%61%62%73%2E%63%6F%6D</A>
 </ADDRESS>
 
 </BODY>
