--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <HEAD>
 <TITLE>Mike Warren</TITLE>
-<LINK REV="made" HREF="%6D%69%6B%65%40%64%65%73%63%61%72%74%65%73%6C%61%62%73%2E%63%6F%6D">
 </HEAD>
 
 <BODY>
@@ -24,14 +23,14 @@
 <p>
 
 <DL>
-<DT> <A href="mailto:%6D%69%6B%65%40%64%65%73%63%61%72%74%65%73%6C%61%62%73%2E%63%6F%6D"> %6D%69%6B%65%40%64%65%73%63%61%72%74%65%73%6C%61%62%73%2E%63%6F%6D </A>
+<DT> <a href="javascript:location='mailto:\u006d\u0069\u006b\u0065\u0040\u0064\u0065\u0073\u0063\u0061\u0072\u0074\u0065\u0073\u006c\u0061\u0062\u0073\u002e\u0063\u006f\u006d';void 0"><script type="text/javascript">document.write('\u006d\u0069\u006b\u0065\u0040\u0064\u0065\u0073\u0063\u0061\u0072\u0074\u0065\u0073\u006c\u0061\u0062\u0073\u002e\u0063\u006f\u006d')</script></a>
 <DT> 100 N Guadalupe St, Santa Fe NM 87501
 </DL>
 
 Last modified: March 28, 2020 <p>
 
 <ADDRESS>
-<A href="/"> Mike Warren, </A> <A href="mailto:%6D%69%6B%65%40%64%65%73%63%61%72%74%65%73%6C%61%62%73%2E%63%6F%6D">%6D%69%6B%65%40%64%65%73%63%61%72%74%65%73%6C%61%62%73%2E%63%6F%6D</A>
+<A href="/"> Mike Warren, </A> <a href="javascript:location='mailto:\u006d\u0069\u006b\u0065\u0040\u0064\u0065\u0073\u0063\u0061\u0072\u0074\u0065\u0073\u006c\u0061\u0062\u0073\u002e\u0063\u006f\u006d';void 0"><script type="text/javascript">document.write('\u006d\u0069\u006b\u0065\u0040\u0064\u0065\u0073\u0063\u0061\u0072\u0074\u0065\u0073\u006c\u0061\u0062\u0073\u002e\u0063\u006f\u006d')</script></a>
 </ADDRESS>
 
 </BODY>
