--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 <p>
 <a href="https://scholar.google.com/citations?user=JwEOoMAAAAAJ"> Google Scholar </a>
 <p>
-<a href="https://bitbucket.org/mswarren"> BitBucket </a>
-<p>
 <a href="https://github.com/mswarren"> GitHub </a>
 <p>
 <a href="https://github.com/mikewarren0"> Descartes Labs GitHub </a>
@@ -20,6 +18,8 @@
 <a href="https://figshare.com/authors/Michael_S_Warren/541288"> figshare </a>
 <p>
 <a href="https://twitter.com/m_warren"> Twitter </a> @m_warren
+<p>
+<a href="https://www.linkedin.com/in/mike-warren-3a0439b1/"> LinkedIn </a>
 <p>
 
 <DL>
